fix: misc info doesnt render well on mobile

--- a/www/ui/templates/display-entry.css
+++ b/www/ui/templates/display-entry.css
@@ -93,6 +93,17 @@
         }
     }
 
+    #misc-info {
+        display: grid;
+        @container viewing-area (width > 650px) {
+            grid-template-columns: 2fr 1fr;
+        }
+
+        @container viewing-area (width <= 650px) {
+            grid-template-rows: 2fr 1fr;
+        }
+    }
+
     #root {
         width: 100%;
         height: 100%;
